travis-ci requires dotnet restore

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ solution: FSharp.Data.JsonPath.sln
 install:
   - mono ./.paket/paket.bootstrapper.exe
   - mono ./.paket/paket.exe restore
+  - dotnet restore
 script:
   - msbuild /p:Configuration=Release FSharp.Data.JsonPath.sln
   - mono ./packages/NUnit.ConsoleRunner/tools/nunit3-console.exe ./FSharp.Data.JsonPath.Tests/bin/Release/FSharp.Data.JsonPath.Tests.dll
