--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: csharp
 solution: FSharp.Data.JsonPath.sln
+dotnet: 2.1.300
 install:
   - mono ./.paket/paket.bootstrapper.exe
   - mono ./.paket/paket.exe restore
-  - dotnet restore
 script:
+  - dotnet restore
   - msbuild /p:Configuration=Release FSharp.Data.JsonPath.sln
   - mono ./packages/NUnit.ConsoleRunner/tools/nunit3-console.exe ./FSharp.Data.JsonPath.Tests/bin/Release/FSharp.Data.JsonPath.Tests.dll
